; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonlistsdir_list.c_dir_list_sort.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonlistsdir_list.c_dir_list_sort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32, i32 }

@qstrcmp_dir = common dso_local global i32 0, align 4
@qstrcmp_plain = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dir_list_sort(%struct.string_list* %0, i32 %1) #0 {
  %3 = alloca %struct.string_list*, align 8
  %4 = alloca i32, align 4
  store %struct.string_list* %0, %struct.string_list** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.string_list*, %struct.string_list** %3, align 8
  %6 = icmp ne %struct.string_list* %5, null
  br i1 %6, label %7, label %23

7:                                                ; preds = %2
  %8 = load %struct.string_list*, %struct.string_list** %3, align 8
  %9 = getelementptr inbounds %struct.string_list, %struct.string_list* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.string_list*, %struct.string_list** %3, align 8
  %12 = getelementptr inbounds %struct.string_list, %struct.string_list* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %7
  %17 = load i32, i32* @qstrcmp_dir, align 4
  br label %20

18:                                               ; preds = %7
  %19 = load i32, i32* @qstrcmp_plain, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = phi i32 [ %17, %16 ], [ %19, %18 ]
  %22 = call i32 @qsort(i32 %10, i32 %13, i32 4, i32 %21)
  br label %23

23:                                               ; preds = %20, %2
  ret void
}

declare dso_local i32 @qsort(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
